--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,7 @@ set_source_files_properties(client/qml/Theme.qml
          client/qml/Main/Dialogs/AddFriendDialog.qml
          client/qml/Main/Dialogs/PlusMenu.qml
          client/qml/Main/Dialogs/SettingsDialog.qml
+         client/qml/Main/Dialogs/StartGroupDialog.qml
          client/qml/Login/Login.qml
          client/qml/Login/RegisterWindow.qml
          client/qml/Main/Main.qml
