--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -2,12 +2,12 @@
 add_executable(register_accounts register_accounts.cpp)
 
 target_link_libraries(register_accounts PRIVATE 
-    asio::asio
+    Boost::asio
 )
 
 # 世界消息压测工具
 add_executable(world_message_test world_message_test.cpp)
 
 target_link_libraries(world_message_test PRIVATE 
-    asio::asio
+    Boost::asio
 )
