Bad v0.35 引入Redis，压测效果不理想，服务器会崩溃

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(server
         server/server/broadcast.cpp
         server/server/push.cpp
         server/server/cache.cpp
+        server/redis/client.cpp
         database/connection.cpp
         database/auth.cpp
         database/friend.cpp
@@ -33,6 +34,7 @@ target_link_libraries(server
         libchat
         STDEXEC::asioexec_boost
         tbb
+        Boost::redis
 )
 
 add_executable(client
@@ -105,3 +107,6 @@ target_link_libraries(MAN
         STDEXEC::asioexec_boost
         tbb
 )
+
+# 添加 benchmark 子目录
+add_subdirectory(benchmark)
